# langchain-deepagents-financial-research

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  STREAMING_SPEC.md  eu_gdp_report_20260508_145118.md  eu_gdp_report_20260518_225844.md  pyproject.toml  server.py  software_valuations_report.md
examples/: eu_gdp_analysis.py  software_valuations.py
skills/you-finance/: SKILL.md  openapi_finance_research.yaml  openapi_research.yaml
skills/youdotcom-finance-research/: SKILL.md
src/finance_research/: __init__.py  agent.py  output.py  prompts.py
src/gdp_research/: __init__.py  agent.py  output.py  prompts.py
