[project]
name = "gdp-research"
version = "0.1.0"
description = "GDP macroeconomic research agent using LangChain Deep Agents and You.com Finance Research API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.5.7",
    "langchain-anthropic>=1.4.3",
    "langchain-mcp-adapters>=0.2.2",
    "python-dotenv>=1.2.2",
]
